--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "url": "https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack.git"
   },
   "scripts": {
-    "create": "coffee create.coffee",
-    "verify": "coffee verify.coffee"
+    "compile": "coffee -c -o tmp .",
+    "create": "./create.coffee",
+    "verify": "./verify.coffee"
   },
   "keywords": [
     "tls",
@@ -26,7 +27,6 @@
     "bitcore-explorers": "^0.11.0",
     "coffee-script": "^1.9.2",
     "lightsaber": "^0.4.1",
-    "node-forge": "^0.6.26",
     "shelljs": "^0.4.0"
   }
 }
