--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "url": "https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack.git"
   },
   "scripts": {
-    "compile": "node_modules/.bin/coffee -c -b -o tmp/ create verify",
-    "create": "./create",
-    "verify": "./verify"
+    "compile": "node_modules/.bin/coffee -c -b -o tmp/ create-ssc verify-ssc",
+    "create-ssc": "./create-ssc",
+    "verify-ssc": "./verify-ssc"
   },
   "keywords": [
     "tls",
