--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack.git"
   },
   "scripts": {
-    "compile": "node_modules/.bin/coffee -c -b -o tmp/ establish-bitcoin-hose create-ssc claim-ssc verify-ssc revoke-sc",
+    "compile": "coffee -c -b -o tmp/ establish-bitcoin-hose create-ssc claim-ssc verify-ssc revoke-sc",
     "establish-bitcoin-hose": "./establish-bitcoin-hose",
     "create-ssc": "./create-ssc",
     "verify-ssc": "./verify-ssc",
